--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,7 +35,7 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/TPV
 endorsed.classpath=
 excludes=
-file.reference.mysql-connector-java-8.0.22.jar=C:\\Users\\thebe\\OneDrive\\Escritorio\\GradoSuperior\\mysql-connector-java-8.0.22.jar
+file.reference.mysql-connector-java-8.0.22.jar=lib/mysql-connector-java-8.0.22.jar
 includes=**
 jar.compress=false
 javac.classpath=\
