--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,11 +35,21 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/TPV
 endorsed.classpath=
 excludes=
+file.reference.commons-beanutils-1.9.4.jar=lib/commons-beanutils-1.9.4.jar
+file.reference.commons-collections4-4.4.jar=lib/commons-collections4-4.4.jar
+file.reference.commons-digester-2.1.jar=lib/commons-digester-2.1.jar
+file.reference.commons-logging-1.2.jar=lib/commons-logging-1.2.jar
+file.reference.jasperreports-6.16.0.jar=lib/jasperreports-6.16.0.jar
 file.reference.mysql-connector-java-8.0.22.jar=lib/mysql-connector-java-8.0.22.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.commons-beanutils-1.9.4.jar}:\
+    ${file.reference.commons-collections4-4.4.jar}:\
+    ${file.reference.commons-digester-2.1.jar}:\
+    ${file.reference.commons-logging-1.2.jar}:\
+    ${file.reference.jasperreports-6.16.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
