--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -40,6 +40,9 @@ file.reference.commons-collections4-4.4.jar=lib/commons-collections4-4.4.jar
 file.reference.commons-digester-2.1.jar=lib/commons-digester-2.1.jar
 file.reference.commons-logging-1.2.jar=lib/commons-logging-1.2.jar
 file.reference.jasperreports-6.16.0.jar=lib/jasperreports-6.16.0.jar
+file.reference.jcommon-1.0.23.jar=lib/jcommon-1.0.23.jar
+file.reference.jdatepicker-1.3.4.jar=lib/jdatepicker-1.3.4.jar
+file.reference.jfreechart-1.0.19.jar=lib/jfreechart-1.0.19.jar
 file.reference.mysql-connector-java-8.0.22.jar=lib/mysql-connector-java-8.0.22.jar
 includes=**
 jar.compress=false
@@ -49,7 +52,10 @@ javac.classpath=\
     ${file.reference.commons-collections4-4.4.jar}:\
     ${file.reference.commons-digester-2.1.jar}:\
     ${file.reference.commons-logging-1.2.jar}:\
-    ${file.reference.jasperreports-6.16.0.jar}
+    ${file.reference.jasperreports-6.16.0.jar}:\
+    ${file.reference.jdatepicker-1.3.4.jar}:\
+    ${file.reference.jfreechart-1.0.19.jar}:\
+    ${file.reference.jcommon-1.0.23.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
